@@ -10,7 +10,7 @@ using System.Runtime.InteropServices;
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("C256 Foenix")]
 [assembly: AssemblyProduct("FoenixIDE")]
-[assembly: AssemblyCopyright("Copyright ©  2020-2024")]
+[assembly: AssemblyCopyright("Copyright ©  2020-2025")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
 
